@@ -4,14 +4,14 @@ Hash: SHA1
 AUX 0.3.3-gcc46.patch 451 RMD160 d9eea160d4916ea759c173e18759334ed7eaca25 SHA1 13b27d8a7e42db39ab76bb976b8e1942c2c8316e SHA256 cc2ad5fd1b7d51075e100f537d33fa558f5db8c60599033fb31c136fb3e9c1f4
 AUX 0.3.3-notypes.patch 432 RMD160 cedbc032a544abb02b3de4870be667b4c16c450b SHA1 bc4d49a1ab1b49234e2be1755d90ba95cf571efa SHA256 3b54fcc280b8f369827d741389abbf4acaf733786bcfed7fed70350e99485fd9
 DIST supertux-0.3.3.tar.bz2 58636270 RMD160 8e10125f687980cae17d7d8c9dfdc9a4dc10a58d SHA1 f89214fd5d997b62753fbba7e1d089d81513f2de SHA256 fceaf95251092d5698211ff0f51f1c50237fa5e2a6690464e9835a66e18301d0
-EBUILD supertux-0.3.3.ebuild 1101 RMD160 2f690a401dbb608cd0af87601e6e9dee7a4d3ce3 SHA1 b62ecde2e6c9dc3ac17b06d05578f0873469d9ff SHA256 4ed3dfec8dec757ac7283e367f778d09aae7940619fa142db12f748aed289e18
+EBUILD supertux-0.3.3.ebuild 1105 RMD160 58255d5331405c3ad8aa130d30b233a6d439f415 SHA1 9a14fbafd09f2e8620cd87e9f01f98f6307c3f04 SHA256 f15e7ec6984f8d1d14cd81a35c514c8de2d4764cc016e06a78e07752685ad22c
 EBUILD supertux-9999.ebuild 1142 RMD160 cb3d55547e55b8bf6b05de617875ecf8faa5241b SHA1 ceb5a55d907b8059a0f73dce74768252ea08712b SHA256 976d790a459ab09ac39a0ba0a7e9a1f11eb2edac7c9b48064f0af5b3fc093462
-MISC ChangeLog 3175 RMD160 201f80b01c66b06178f17ac7b3049ce3d036e59b SHA1 938da1d7f2ac06dabd98a2d248526465f483077c SHA256 6a53404debf35ace1b76f603c70e56bbb1f50c33cc0417f2bab5f53b4f1f0bd6
-MISC metadata.xml 247 RMD160 e6b25bfa3980cc1cc9e732b67f457fe2a2e9863c SHA1 4353118d4852f2d7ba4ccbbbb06bbf9fcfd25d24 SHA256 883dd20701cb074b79a6a73acfa6f7e6c5a0dcafba8f506da3ac324327300d68
+MISC ChangeLog 3288 RMD160 082e901119c9575ae97fc78c31f21d86e663334e SHA1 0e4ff8d73848f68b7e85efa7ee1aa2852e38b3c5 SHA256 1519b52fac13d722f96c7f6609c8faa5874c49c118f07c01be498c37ea67ef30
+MISC metadata.xml 252 RMD160 98e581e345ae7649474731426f74795781bbd896 SHA1 da5d32bd96683be482b926f921805e8cc754f619 SHA256 261fa9fd2ee52f8b5898f381128b854fa20f980d551bc2b6fbabd501f3f01036
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.18 (GNU/Linux)
 
-iEYEARECAAYFAk7VYGQACgkQ9xNbxaeWTTwaeQCcDL2qcKBfdD7IW9dscCDGWDtM
-OcMAn1vpK7xSomOvJXl0/v0mvHNgLCxd
-=JMkz
+iEYEARECAAYFAk72WuoACgkQ9xNbxaeWTTz+agCfdWuSOZEOWExu6o8BdmH5C7HN
+5ggAni6RO/9p+iber6bzG+pdAr/zLRAx
+=f1kn
 -----END PGP SIGNATURE-----
